<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/primary_800"
tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/bienvenidaTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/titulo_bienvenida"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/primary_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/innerTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:text="@string/explicacion_inicial_3"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/innerTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:text="@string/explicacion_inicial_2"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/innerTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:text="@string/explicacion_inicial_1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="30dp"
        android:text="@string/boton_siguiente"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="@color/secondary_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>