<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_800"
    tools:context=".ConfiguracionInicial">

    <TextView
        android:id="@+id/bienvenidaTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/titulo_configuracion_inicial"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiempo_ciclo"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/bienvenidaTitulo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="51dp"
        android:layout_marginStart="15dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/newText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="#11114A"
        app:cardCornerRadius="4dp"
        app:cardPreventCornerOverlap="false">

        <EditText
            android:id="@+id/numberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_tiempo_ciclo"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:background="@null"
            android:inputType="number"
            android:layout_gravity="center_horizontal"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/recommendationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recomendacion_tiempo_ciclo"
        android:textColor="@color/primiry_50"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/newTextDuplicate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/recommendationText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="27dp"
        android:layout_marginStart="15dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDuplicate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/newTextDuplicate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="#11114A"
        app:cardCornerRadius="4dp"
        app:cardPreventCornerOverlap="false">

        <EditText
            android:id="@+id/numberTextDuplicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_edad"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:background="@null"
            android:inputType="number"
            android:layout_gravity="center_horizontal"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="72dp"
        android:text="@string/boton_siguiente"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="@color/secondary_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>